@startuml

class Pizza
class CheesePizza
class GreekPizza
class SimpleFactory2

CheesePizza --|> Pizza
GreekPizza --|> Pizza

OrderPizza --o SimpleFactory2
OrderPizza1 --o SimpleFactory2
OrderPizza2 --o SimpleFactory2

class Pizza {
    #prepare():void
    #bake():void
    #cut():void
    #box():void
}

class SimpleFactory2 {
    #createPizza(String orderType):Pizza
}

@enduml